# CppBasics

./: 01-c_with_class.md  02-string.md  03-stream.md  04-template.md  05-new_traits.md  06-concurrent.md  07-socket.md  08-type_traits.md  09-standard_template_library.md  10-design_parttens.md
cppdemo/: 01-string-operations-in-c.cc  02-string-operations-in-cpp.cc  03-string_view.cc  04-sstream.cc  05-iostream.cc  06-template-args-number-specialize.cc  07-template-args-type-specialize.cc  08-variable-argument-function-template.cc  09-variable-argument-class-template.cc  10-template-template-args.cc  11-universal-reference.cc  12-perfect-forwarding.cc  13-unique_ptr.cc  14-shared_ptr.cc  15-circular-reference.cc  16-thread_local.cc  17-call_once.cc  18-std-promise.cc  19-std-packaged_task.cc  20-std-async.cc  21-condition_variable.cc  22-std-atomic_flag.cc  23-compare_and_exchange.cc  24-spin_lock.cc  CMakeLists.txt
cppdemo/socket/: tcp_client.cc  tcp_server.cc  udp_client.cc  udp_server.cc
cppdemo/utils/: tick.h  types.h
